[package]
name = "blockchain-concepts-rust"
version = "0.1.0"
edition = "2021"
description = "A mini blockchain implementation from scratch in Rust"
authors = ["Roseanne Park"]
license = "MIT"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
